# Physical_Volume_Mixer

./: .gitignore  CMakeLists.txt  Physical_Volume_Mixer.sln  ProgramVolume.cpp  ProgramVolume.h  RCb20028  README.md  TestVolume_c++.cpp  resource.h  vs_code_test.aps  vs_code_test.rc  vs_code_test.sln  vs_code_test.vcxproj  vs_code_test.vcxproj.filters
Icons/: NotificationIcon_16x16.xcf  NotificationIcon_32x32.xcf
Physical_Volume_Mixer/: Physical_Volume_Mixer.vcxproj  Physical_Volume_Mixer.vcxproj.filters  ProgramVolume.h  TestVolume_c++.cpp
Physical_Volume_Mixer/arduino/Rotary_encoder/: Rotary_encoder.ino
Physical_Volume_Mixer/arduino/sketch_nov5a/: sketch_nov5a.ino
Physical_Volume_Mixer/include/: libserialport.lib
arduino/Rotary_encoder/: Rotary_encoder.ino
